<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rick.rickvergunst_pset6.LogInActivity">

    <EditText
        android:id="@+id/logInUserEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/logInPassEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/logInUserEdit"
        android:padding="10dp"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/logInButton"
        android:layout_below="@id/logInPassEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInButton"
        android:layout_centerHorizontal="true"
        android:text="@string/signUp"
        android:padding="10dp"
        />

</RelativeLayout>
