<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rick.rickvergunst_pset6.MainActivity">

        <TextView
            android:id="@+id/mainWelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="36dp"
            />

    <LinearLayout
        android:layout_below="@+id/mainWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/bottomButtons"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
    <TextView
        android:id="@+id/mainArtistText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favouriteArtists"
        />

    <ListView
        android:id="@+id/mainArtistListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainArtistText"
        >
    </ListView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:id="@+id/mainAlbumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favouriteAlbums"
                />

            <ListView
                android:id="@+id/mainAlbumListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mainAlbumText"
                >
            </ListView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:id="@+id/mainTrackText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favouriteTracks"
                />

            <ListView
                android:id="@+id/mainTrackListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mainTrackText"
                >
            </ListView>
        </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.25">
    <TextView
        android:id="@+id/mainUserText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/followedUsers"
        />

    <ListView
        android:id="@+id/mainUserListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainUserText"
        >
    </ListView>
</RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            >
            <Button
                android:id="@+id/toHomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toHome"
                android:layout_weight="0.35"
                />
            <Button
                android:id="@+id/toSearchPageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toSearch"
                android:layout_weight="0.30"
                />
            <Button
                android:id="@+id/logOutButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/logOut"
                android:layout_weight="0.35"
                />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
