<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rick.rickvergunst_pset6.SearchPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/bottomButtons"
        >
        <RelativeLayout
            android:id="@+id/scrollLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
    
    <Button
        android:id="@+id/searchPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/search"
        android:layout_alignParentRight="true"
        />
    
    <EditText
        android:id="@+id/searchPageEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/searchHint"
        android:layout_toLeftOf="@+id/searchPageButton"
        />

    <Spinner
        android:id="@+id/searchPageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchPageEdit"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        ></Spinner>

    <ListView
        android:id="@+id/searchPageListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchPageSpinner"
        ></ListView>

        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            >
            <Button
                android:id="@+id/toHomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toHome"
                android:layout_weight="0.35"
                />
            <Button
                android:id="@+id/toSearchPageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toSearch"
                android:layout_weight="0.30"
                />
            <Button
                android:id="@+id/logOutButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/logOut"
                android:layout_weight="0.35"
                />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>