<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_artist_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rick.rickvergunst_pset6.ArtistInfo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/bottomButtons"
        >
        <RelativeLayout
            android:id="@+id/scrollLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
    <TextView
        android:id="@+id/artistNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="36dp"
        android:layout_toLeftOf="@+id/artistAddButton"
        />

    <Button
        android:id="@+id/artistAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text=""
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/artistNameText"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25">
        <TextView
            android:id="@+id/similarArtistText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/similarArtists"
            />
        <ListView
            android:id="@+id/artistSimilarListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/similarArtistText"
            ></ListView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25">
            <TextView
                android:id="@+id/topAlbumsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topAlbums"
                />
    <ListView
        android:id="@+id/artistTopAlbums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topAlbumsText"
        ></ListView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25">
            <TextView
                android:id="@+id/topTracksText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topTracks"
                />
        <ListView
            android:id="@+id/artistTopTracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topTracksText"
            ></ListView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25">
            <TextView
                android:id="@+id/similarUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/similarUsers"
                />
            <ListView
                android:id="@+id/artistSimilarUsersList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/similarUsers"
                ></ListView>
        </RelativeLayout>
    </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            >
            <Button
                android:id="@+id/toHomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toHome"
                android:layout_weight="0.35"
                />
            <Button
                android:id="@+id/toSearchPageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toSearch"
                android:layout_weight="0.30"
                />
            <Button
                android:id="@+id/logOutButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/logOut"
                android:layout_weight="0.35"
                />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>