<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_album_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rick.rickvergunst_pset6.AlbumInfo">
        <RelativeLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

    <TextView
        android:id="@+id/albumInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="36dp"
        android:layout_toLeftOf="@+id/albumInfoButton"
        />
            <Button
                android:id="@+id/albumInfoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_alignParentRight="true"
                />
            </RelativeLayout>


    <TextView
        android:id="@+id/albumInfoArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="26dp"
        android:layout_below="@+id/first"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/albumInfoArtist"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/albumInfoArtist"
        android:layout_weight="0.5"
        >

    <TextView
        android:id="@+id/albumInfoTracksText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tracks"
        />

    <ListView
        android:id="@+id/albumInfoTracksList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/albumInfoTracksText"
        ></ListView>
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/albumInfoArtist"
        android:layout_weight="0.5"
        >

        <TextView
            android:id="@+id/albumInfoUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/similarUsers"
            />

        <ListView
            android:id="@+id/albumInfoUserList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/albumInfoUserText"
            ></ListView>
    </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            >
            <Button
                android:id="@+id/toHomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toHome"
                android:layout_weight="0.35"
                />
            <Button
                android:id="@+id/toSearchPageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toSearch"
                android:layout_weight="0.30"
                />
            <Button
                android:id="@+id/logOutButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/logOut"
                android:layout_weight="0.35"
                />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>