<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_track_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rick.rickvergunst_pset6.TrackInfo">

        <RelativeLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

    <TextView
        android:id="@+id/trackInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="36dp"
        android:layout_toLeftOf="@+id/trackInfoButton"
        />
            <Button
                android:id="@+id/trackInfoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />
            </RelativeLayout>

    <TextView
        android:id="@+id/trackInfoArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="26dp"
        android:layout_below="@+id/first"
        />

    <TextView
        android:id="@+id/trackInfoAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="26dp"
        android:layout_below="@id/trackInfoArtist"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/trackInfoAlbum"
        android:layout_above="@+id/bottomButtons"
        >

        <TextView
            android:id="@+id/trackInfoUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/similarUsers"
            />

        <ListView
            android:id="@+id/trackInfoUserList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trackInfoUserText"
            ></ListView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            >
            <Button
                android:id="@+id/toHomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toHome"
                android:layout_weight="0.35"
                />
            <Button
                android:id="@+id/toSearchPageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toSearch"
                android:layout_weight="0.30"
                />
            <Button
                android:id="@+id/logOutButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/logOut"
                android:layout_weight="0.35"
                />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
