<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rick.rickvergunst_pset6.UserInfo">

    <RelativeLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/first"
        >

    <TextView
        android:id="@+id/userInfoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_toLeftOf="@+id/userInfoAddRemoveButton"
        android:textSize="36dp"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />

    <Button
        android:id="@+id/userInfoAddRemoveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_alignParentRight="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/first"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:background="@color/second"
            >
    <TextView
        android:id="@+id/userInfoFavArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favouriteArtists"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />

    <ListView
        android:id="@+id/userInfoArtistListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfoFavArtist"
        ></ListView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:background="@color/third"
            >
            <TextView
                android:id="@+id/userInfoFavAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favouriteAlbums"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                />

            <ListView
                android:id="@+id/userInfoAlbumListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userInfoFavAlbum"
                ></ListView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:background="@color/second"
            >
            <TextView
                android:id="@+id/userInfoFavTrack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favouriteTracks"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                />

            <ListView
                android:id="@+id/userInfoTrackListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userInfoFavTrack"
                ></ListView>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/fourth"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/toHomeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toHome"
                android:layout_weight="0.35"
                />
            <Button
                android:id="@+id/toSearchPageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toSearch"
                android:layout_weight="0.30"
                />
            <Button
                android:id="@+id/logOutButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/logOut"
                android:layout_weight="0.35"
                />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
